# llm-gateway

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  budget.py  config.py  db.py  engine.py  main.py  models.py  ratelimit.py  routing.py  schemas.py
app/routes/: chat.py  embeddings.py  health.py  keys.py  models.py  stats.py
app/static/: dashboard.js  index.html
secrets/: .gitignore
tests/: conftest.py  test_budget.py  test_config.py  test_embeddings.py  test_engine.py  test_fallback_chains.py  test_gateway.py  test_ratelimit.py  test_tools_vision.py
