[project]
name = "llm-gateway"
version = "0.1.0"
description = "OpenAI-compatible LLM gateway across OpenAI, Anthropic & Gemini with cost + latency tracking"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20",
    "fastapi>=0.115",
    "httpx>=0.27",
    "litellm>=1.50",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
